--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 
         <main>
 
-            <h1>HTML Template</h1>
+            <h1>Web Development Vocabulary</h1>
 
             <p>This is a basic HTML structure with linked CSS and JavaScript files.</p>
+
+            <ul id="vocab-list"></ul> <!-- Pull JS list  -->
         
         </main>
 
