--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <p>This is a basic HTML structure with linked CSS and JavaScript files.</p>
 
-            <ul id="vocab-list"></ul>
+            <ul id="vocab-list"></ul>  <!-- Trust me bro. Check app.js -->
         
         </main>
 
